--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 <td>
 <h1 style="color: darkslategrey">COMS30127</h1><p>
 <p>notes: <a href="http://github.com/coms30127/2018_19">github.com/coms30127/2018_19</a></p>
-<p>papers: <a href="http://github.com/coms30127/papers">github.com/coms30127/papers</a></p>
+<p>research papers: <a href="http://github.com/coms30127/papers">github.com/coms30127/papers</a></p>
+<p>exam papers: <a href="http://github.com/coms30127/exam_papers">github.com/coms30127/exam_papers</a></p>
 <p>discussion: <a href="http://reddit.com/r/coms30127">reddit.com/r/coms30127</a></p>
 <p>Timetable
 <ul>
