--- a/index.html
+++ b/index.html
@@ -22,16 +22,19 @@
 
      <td width="15"> 
 <td>
-<h1 style="color: darkslategrey">COMS30127</h1><p>
-<p>notes: <a href="http://github.com/coms30127/2018_19">github.com/coms30127/2018_19</a></p>
+<h1 style="color: darkslategrey">COMS30017</h1><p>
+<p>This unit is about how the brain works, the neural dynamics which
+supports computation. It attempts to describe our models of the neural
+activity in the brain and to give some indication of how that supports
+some of the computational activity of the brain. I have taught this
+unit in the past and I am returning to teaching it again after a few
+years when it had other lecturers, although last year I did teach a
+  portion of the unit. The notes from last year can be found at
+<p><a href="https://github.com/LaurenceA/COMS30017_2022">github.com/LaurenceA/COMS30017_2022</a>
+<p>2018/19 notes: <a href="http://github.com/coms30127/2018_19">github.com/coms30127/2018_19</a></p>
+<p>even older notes: <a href="https://github.com/conorhoughton/COMS30127">https://github.com/conorhoughton/COMS30127</a></p>
 <p>research papers: <a href="http://github.com/coms30127/papers">github.com/coms30127/papers</a></p>
 <p>exam papers: <a href="http://github.com/coms30127/exam_papers">github.com/coms30127/exam_papers</a></p>
-<p>discussion: <a href="http://reddit.com/r/coms30127">reddit.com/r/coms30127</a></p>
-<p>Timetable
-<ul>
-<li><strong>Tuesday 2-3</strong> QB Pugsley</li>
-<li><strong>Thursday 4-5</strong> Physics Tyndall</li>
-</ul>
 </body>
 </html>
 
