--- a/index.html
+++ b/index.html
@@ -29,8 +29,15 @@ activity in the brain and to give some indication of how that supports
 some of the computational activity of the brain. I have taught this
 unit in the past and I am returning to teaching it again after a few
 years when it had other lecturers, although last year I did teach a
-  portion of the unit. The notes from last year can be found at
-<p><a href="https://github.com/LaurenceA/COMS30017_2022">github.com/LaurenceA/COMS30017_2022</a>
+  portion of the unit.</p>
+<p>Here is a putative layout for the unit:</p>
+<ul>
+<li> Weeks 1-7: Lectures</li>
+<li> Weeks 2-: Problem classes</li>
+<li> Weeks 8-10: Coursework time, for those in CS taking the 20-credit coursework version of the unit. </li>
+<li>Week 11-12: Consolidation/revision week for students taking the exam.</li>
+</ul>
+<p>notes from last year<a href="https://github.com/LaurenceA/COMS30017_2022">github.com/LaurenceA/COMS30017_2022</a>
 <p>2018/19 notes: <a href="http://github.com/coms30127/2018_19">github.com/coms30127/2018_19</a></p>
 <p>even older notes: <a href="https://github.com/conorhoughton/COMS30127">https://github.com/conorhoughton/COMS30127</a></p>
 <p>research papers: <a href="http://github.com/coms30127/papers">github.com/coms30127/papers</a></p>
