--- a/index.html
+++ b/index.html
@@ -23,21 +23,34 @@
      <td width="15"> 
 <td>
 <h1 style="color: darkslategrey">COMS30017</h1><p>
-<p>This unit is about how the brain works, the neural dynamics which
+<p>This unit is about <b>how the brain works</b>, the neural dynamics which
 supports computation. It attempts to describe our models of the neural
 activity in the brain and to give some indication of how that supports
 some of the computational activity of the brain. I have taught this
 unit in the past and I am returning to teaching it again after a few
 years when it had other lecturers, although last year I did teach a
   portion of the unit.</p>
-<p>Here is a putative layout for the unit:</p>
+<p>The <b>guide</b>: the guide page will contain
+  links to all the material, notes and some online lectures. This is empty at the moment but that will change.
+  <ul>
+    <li><a href="./2023.html">2023 guide</a></li>
+  </ul>
+</p>
+<p><b>Timetable</b>:
+  <ul>
+    <li><b>9h Tuesday</b> lecture QB 1.18LT</li>
+    <li><b>10h Wednesday</b> lecture ALB SM2</li>
+    <li><b>15h Thursday</b> problem class QB 1.07</li>
+  </ul>
+  </p>
+<p>Here is a putative <b>layout for the unit</b>:</p>
 <ul>
 <li> Weeks 1-7: Lectures</li>
 <li> Weeks 2-: Problem classes</li>
 <li> Weeks 8-10: Coursework time, for those in CS taking the 20-credit coursework version of the unit. </li>
 <li>Week 11-12: Consolidation/revision week for students taking the exam.</li>
 </ul>
-<p>notes from last year<a href="https://github.com/LaurenceA/COMS30017_2022">github.com/LaurenceA/COMS30017_2022</a>
+<p>notes from last year: <a href="https://github.com/LaurenceA/COMS30017_2022">github.com/LaurenceA/COMS30017_2022</a>
 <p>2018/19 notes: <a href="http://github.com/coms30127/2018_19">github.com/coms30127/2018_19</a></p>
 <p>even older notes: <a href="https://github.com/conorhoughton/COMS30127">https://github.com/conorhoughton/COMS30127</a></p>
 <p>research papers: <a href="http://github.com/coms30127/papers">github.com/coms30127/papers</a></p>
