--- a/2023.html
+++ b/2023.html
@@ -32,10 +32,12 @@
 	      <li>notes: Types. <a href="https://github.com/com30127/2023_24/blob/master/01_Introduction/01.3_types.pdf">01.3_types.pdf</a></li>
 	      <li>notes: Cortex. <a href="https://github.com/coms30127/2023_24/blob/master/01_Introduction/01.4_cortex.pdf">01.4_cortex.pdf</a></li>
     <li>notes: Areas. <a href="https://github.com/coms30127/2023_24/blob/master/01_Introduction/01.5_areas.pdf">01.5_areas.pdf</a></li>
-    <li><b>online lectures</b> These lectures are from a similar MSc unit I taught in the past and may be useful.
-      	    <li>online lecture from last year: Neurons and Action Potentials. <a href="https://web.microsoftstream.com/video/0c223a16-9a06-4ae2-9dd3-77d98b599acf">streams lecture 1</a></li>
-	    <li>online lecture from last year: Synapses. <a href="https://web.microsoftstream.com/video/323f51e3-22ae-42c4-9078-6b6c15be0c56">streams lecture 2</a></li>
-</ul>
+    <li><b>online lectures</b> These lectures are from an MSc unit I taught in the past and may be useful.
+      <ul>
+      	    <li>online lecture: Neurons and Action Potentials. <a href="https://web.microsoftstream.com/video/0c223a16-9a06-4ae2-9dd3-77d98b599acf">streams lecture 1</a></li>
+	    <li>online lecture: Synapses. <a href="https://web.microsoftstream.com/video/323f51e3-22ae-42c4-9078-6b6c15be0c56">streams lecture 2</a></li>
+      </ul>
+      </ul>
 </body>
 </html>
 
