--- a/2023.html
+++ b/2023.html
@@ -41,7 +41,8 @@
 	    <h2 style="color: black">Picture free notes</h2>
 These notes replace the images with a short text description.
 	    <ul>
-	    <li>Introduction: <a href="https://github.com/coms30127/2023_24/blob/master/01_Introduction/01.1_neurons.nopic.pdf">01.1_neurons.nopic.pdf</a>, 
+	      <li>Introduction: <a href="https://github.com/coms30127/2023_24/blob/master/01_Introduction/01.1_neurons.nopic.pdf">01.1_neurons.nopic.pdf</a>,
+		<a href="https://github.com/coms30127/2023_24/blob/master/01_Introduction/01.2_synapses.nopic.pdf">01.2_synapses.nopic.pdf</a>, 01.3_types.pdf has no pictures, 
 	      <a href="https://github.com/coms30127/2023_24/blob/master/01_Introduction/01.4_cortex.nopic.pdf">01.4_cortex.nopic.pdf</a>,
     <a href="https://github.com/coms30127/2023_24/blob/master/01_Introduction/01.5_areas.pdf">01.5_areas.nopic.pdf</a></li>
 </ul>
