--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@ years when it had other lecturers, although last year I did teach a
 </ul>
 <p>Some notes and links:
 <ul>
-<li>notes from last year: <a href="https://github.com/LaurenceA/COMS30017_2022">github.com/LaurenceA/COMS30017_2022</a></li>
-<li>2018/19 notes: <a href="http://github.com/coms30127/2018_19">github.com/coms30127/2018_19</a></li>
+  <li>notes from last year: <a href="https://github.com/LaurenceA/COMS30017_2022">github.com/LaurenceA/COMS30017_2022</a></li>
+  <li>Cian taught the unit this year using slide. 2019/20 slides: <a href="http://github.com/coms30127/2019_20">https://github.com/coms30127/2019_20</a></li>
+<li>The last time I taught a large part of this unit. 2018/19 notes: <a href="http://github.com/coms30127/2018_19">github.com/coms30127/2018_19</a></li>
 <li>even older notes: <a href="https://github.com/conorhoughton/COMS30127">https://github.com/conorhoughton/COMS30127</a></li>
 <li>research papers: <a href="http://github.com/coms30127/papers">github.com/coms30127/papers</a></li>
 <li>some exam papers: <a href="http://github.com/coms30127/exam_papers">github.com/coms30127/exam_papers</a> this is incomplete and will be expanded</li>
