--- a/2023.html
+++ b/2023.html
@@ -37,6 +37,10 @@
       	    <li>online lecture: Neurons and Action Potentials. <a href="https://web.microsoftstream.com/video/0c223a16-9a06-4ae2-9dd3-77d98b599acf">streams lecture 1</a></li>
 	    <li>online lecture: Synapses. <a href="https://web.microsoftstream.com/video/323f51e3-22ae-42c4-9078-6b6c15be0c56">streams lecture 2</a></li>
       </ul>
+    <li><b>computation</b>: these notes go over some background mathematical and coding details. They will not be lectured.
+    <li>notes: Coding. <a href="https://github.com/coms30127/2023_24/blob/master/02_Computation/02.1_computing.pdf">02.1_computing.pdf</a></li>
+    <li>notes: Differential equations. <a href="https://github.com/coms30127/2023_24/blob/master/02_Computation/02.2_maths.pdf">02.2_maths.pdf</a></li>
+    <li>notes: Numerical approaches. <a href="https://github.com/coms30127/2023_24/blob/master/02_Computation/02.3_numerical.pdf">02.3_numerical.pdf</a> and <a href="https://github.com/coms30127/2023_24/blob/master/02_Computation/rk_note.pdf">rk_note.pdf</a></li></li>
       </ul>
 	    <h2 style="color: black">Picture free notes</h2>
 These notes replace the images with a short text description.
@@ -44,7 +48,8 @@ These notes replace the images with a short text description.
 	      <li>Introduction: <a href="https://github.com/coms30127/2023_24/blob/master/01_Introduction/01.1_neurons.nopic.pdf">01.1_neurons.nopic.pdf</a>,
 		<a href="https://github.com/coms30127/2023_24/blob/master/01_Introduction/01.2_synapses.nopic.pdf">01.2_synapses.nopic.pdf</a>, 01.3_types.pdf has no pictures, 
 	      <a href="https://github.com/coms30127/2023_24/blob/master/01_Introduction/01.4_cortex.nopic.pdf">01.4_cortex.nopic.pdf</a>,
-    <a href="https://github.com/coms30127/2023_24/blob/master/01_Introduction/01.5_areas.pdf">01.5_areas.nopic.pdf</a></li>
+	      <a href="https://github.com/coms30127/2023_24/blob/master/01_Introduction/01.5_areas.pdf">01.5_areas.nopic.pdf</a></li>
+	      <li>Computation: 01.1_computation.pdf has no picture, <a href="https://github.com/coms30127/2023_24/blob/master/02_Computation/02.2_maths.nopic.pdf">02.2_maths.nopic.pdf</a>, <a href="https://github.com/coms30127/2023_24/blob/master/02_Computation/02.3_numerical.nopic.pdf">02.3_numerical.nopic.pdf</a>, rk_note.pdf has not pictures.</li>
 </ul>
 </body>
 
