--- a/2023.html
+++ b/2023.html
@@ -41,6 +41,10 @@
     <li>notes: Coding. <a href="https://github.com/coms30127/2023_24/blob/master/02_Computation/02.1_computing.pdf">02.1_computing.pdf</a></li>
     <li>notes: Differential equations. <a href="https://github.com/coms30127/2023_24/blob/master/02_Computation/02.2_maths.pdf">02.2_maths.pdf</a></li>
     <li>notes: Numerical approaches. <a href="https://github.com/coms30127/2023_24/blob/master/02_Computation/02.3_numerical.pdf">02.3_numerical.pdf</a> and <a href="https://github.com/coms30127/2023_24/blob/master/02_Computation/rk_note.pdf">rk_note.pdf</a></li></li>
+    	    <li><b>lecture 3</b>: parts of the brain, neuroscience data.
+	      <li>notes: Areas. <a href="https://github.com/com30127/2023_24/blob/master/01_Introduction/01.5_areas.pdf">01.5_areas.pdf</a></li>
+    <li>notes: Recordings. <a href="https://github.com/coms30127/2023_24/blob/master/01_Introduction/01.6_recordings.pdf">01.6_recordings.pdf</a></li>
+    <li>notes: McCulloch-Pitt neurons.  <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.1_mp_neurons.pdf">03.1_mp_neurons.pdf</a></li>
       </ul>
 	    <h2 style="color: black">Picture free notes</h2>
 These notes replace the images with a short text description.
