--- a/2023.html
+++ b/2023.html
@@ -49,10 +49,13 @@
     <li>notes: Recordings. <a href="https://github.com/coms30127/2023_24/blob/master/01_Introduction/01.6_recordings.pdf">01.6_recordings.pdf</a></li>
     <li>notes: McCulloch-Pitt neurons.  <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.1_mp_neurons.pdf">03.1_mp_neurons.pdf</a></li>
       </ul>
-	    <h2 style="color: black">Courseworks</h2>
-	    These are the formative courseworks, they are not for marks.
+	    <h2 style="color: black">Courseworks</h2> These are the
+	    formative courseworks, they are not for marks and not
+	    submitted. Doing these courseworks should help you
+	    understand the lectures, but the exam with be a normal
+	    written exam and so won't look like the courseworks. In short, the courseworks are instead of worksheets, but like worksheets, they aren't marked.
 	    <ul>
-	      <li>notes: Differential equations. <a href="https://github.com/coms30127/2023_24/blob/main/Courseworks/Coursework1/coursework1.pdf">coursework1.pdf</a></li>
+	      <li>notes: Coursework1. <a href="https://github.com/coms30127/2023_24/blob/main/Courseworks/Coursework1/coursework1.pdf">coursework1.pdf</a></li>
 	      </ul>
 
 	    
