--- a/2023.html
+++ b/2023.html
@@ -47,7 +47,8 @@
    	    <li><b>lecture 3</b>: parts of the brain, neuroscience data.
 	      <li>notes: Areas. <a href="https://github.com/com30127/2023_24/blob/master/01_Introduction/01.5_areas.pdf">01.5_areas.pdf</a></li>
     <li>notes: Recordings. <a href="https://github.com/coms30127/2023_24/blob/master/01_Introduction/01.6_recordings.pdf">01.6_recordings.pdf</a></li>
-    <li>notes: McCulloch-Pitt neurons.  <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.1_mp_neurons.pdf">03.1_mp_neurons.pdf</a></li>
+	    <li>notes: McCulloch-Pitt neurons.  <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.1_mp_neurons.pdf">03.1_mp_neurons.pdf</a></li>
+	       <li>notes: Hopfield networks.  <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.2_hopfield.pdf">03.2_hopfield.pdf</a></li>
       </ul>
 	    <h2 style="color: black">Courseworks</h2>
 	    These are the formative courseworks, they are not for marks.
@@ -63,7 +64,8 @@ These notes replace the images with a short text description.
 		<a href="https://github.com/coms30127/2023_24/blob/master/01_Introduction/01.2_synapses.nopic.pdf">01.2_synapses.nopic.pdf</a>, 01.3_types.pdf has no pictures, 
 	      <a href="https://github.com/coms30127/2023_24/blob/master/01_Introduction/01.4_cortex.nopic.pdf">01.4_cortex.nopic.pdf</a>,
 	      <a href="https://github.com/coms30127/2023_24/blob/master/01_Introduction/01.5_areas.pdf">01.5_areas.nopic.pdf</a></li>
-	      <li>Computation: 01.1_computation.pdf has no picture, <a href="https://github.com/coms30127/2023_24/blob/master/02_Computation/02.2_maths.nopic.pdf">02.2_maths.nopic.pdf</a>, <a href="https://github.com/coms30127/2023_24/blob/master/02_Computation/02.3_numerical.nopic.pdf">02.3_numerical.nopic.pdf</a>, rk_note.pdf has not pictures.</li>
+	      <li>Computation: 02.1_computation.pdf has no pictures, <a href="https://github.com/coms30127/2023_24/blob/master/02_Computation/02.2_maths.nopic.pdf">02.2_maths.nopic.pdf</a>, <a href="https://github.com/coms30127/2023_24/blob/master/02_Computation/02.3_numerical.nopic.pdf">02.3_numerical.nopic.pdf</a>, rk_note.pdf has not pictures.</li>
+	      <li> MP Neurons: 03.1_mp_neurons.pdf has no pictures, <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.2_hopfield.nopic.pdf">03.2_hopfield.nopic.pdf</a></li>
 </ul>
 </body>
 
