--- a/2023.html
+++ b/2023.html
@@ -47,14 +47,23 @@
    	    <li><b>lecture 3</b>: parts of the brain, neuroscience data.
 	      <li>notes: Areas. <a href="https://github.com/com30127/2023_24/blob/master/01_Introduction/01.5_areas.pdf">01.5_areas.pdf</a></li>
     <li>notes: Recordings. <a href="https://github.com/coms30127/2023_24/blob/master/01_Introduction/01.6_recordings.pdf">01.6_recordings.pdf</a></li>
+	    <li><b>lecture 4</b>: McCulloch-Pitts neurons and Hopfield networks.
 	    <li>notes: McCulloch-Pitt neurons.  <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.1_mp_neurons.pdf">03.1_mp_neurons.pdf</a></li>
-	       <li>notes: Hopfield networks.  <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.2_hopfield.pdf">03.2_hopfield.pdf</a></li>
-      </ul>
+	     <li>notes: Hopfield
+	       networks.  <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.2_hopfield.pdf">03.2_hopfield.pdf</a></li>
+	    </ul>
+	    <h2 style="color: black">Week 3 - CH - Hopfield networks, the hippocampus and perceptrons</h2>
+	    <ul>
+	      <li><b>lecture 5</b>: The Hopfield network and the hippocampus.</li>
+	      <li>notes: the hippocampus.  <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.3_hippocampus.pdf">03.1_hippocampus.pdf</a></li>
+	    </ul>
 	    <h2 style="color: black">Courseworks</h2> These are the
 	    formative courseworks, they are not for marks and not
 	    submitted. Doing these courseworks should help you
 	    understand the lectures, but the exam with be a normal
-	    written exam and so won't look like the courseworks. In short, the courseworks are instead of worksheets, but like worksheets, they aren't marked.
+	    written exam and so won't look like the courseworks. In
+	    short, the courseworks are instead of worksheets, but like
+	    worksheets, they aren't marked.
 	    <ul>
 	      <li>notes: Coursework1. <a href="https://github.com/coms30127/2023_24/blob/main/Courseworks/Coursework1/coursework1.pdf">coursework1.pdf</a></li>
 	      </ul>
