--- a/2023.html
+++ b/2023.html
@@ -55,6 +55,8 @@
 	    <h2 style="color: black">Week 3 - CH - Hopfield networks, the hippocampus and perceptrons</h2>
 	    <ul>
 	      <li><b>lecture 5</b>: The Hopfield network and the hippocampus.</li>
+	      <li><b>lecture 5 video</b>: <a href="https://www.youtube.com/watch?v=Q4Vt4pyXRo0">youtube</a>. This is temporary, I will record a new one.</li>
+	      <li>slides: the hippocampus.  <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.slides.pdf">03.slides.pdf</a></li>
 	      <li>notes: the hippocampus.  <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.3_hippocampus.pdf">03.1_hippocampus.pdf</a></li>
 	    </ul>
 	    <h2 style="color: black">Courseworks</h2> These are the
