--- a/2023.html
+++ b/2023.html
@@ -57,7 +57,8 @@
 	      <li><b>lecture 5</b>: The Hopfield network and the hippocampus.</li>
 	      <li><b>lecture 5 video</b>: <a href="https://www.youtube.com/watch?v=Q4Vt4pyXRo0">youtube</a>. This is temporary, I will record a new one.</li>
 	      <li>slides: the hippocampus.  <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.slides.pdf">03.slides.pdf</a></li>
-	      <li>notes: the hippocampus.  <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.3_hippocampus.pdf">03.1_hippocampus.pdf</a></li>
+	      <li>notes: the hippocampus.  <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.3_hippocampus.pdf">03.4_hippocampus.pdf</a></li>
+  <li>notes: the perceptron.  <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.4_perceptron.pdf">03.4_perceptron.pdf</a></li>
 	    </ul>
 	    <h2 style="color: black">Courseworks</h2> These are the
 	    formative courseworks, they are not for marks and not
@@ -79,7 +80,7 @@ These notes replace the images with a short text description.
 	      <a href="https://github.com/coms30127/2023_24/blob/master/01_Introduction/01.4_cortex.nopic.pdf">01.4_cortex.nopic.pdf</a>,
 	      <a href="https://github.com/coms30127/2023_24/blob/master/01_Introduction/01.5_areas.pdf">01.5_areas.nopic.pdf</a></li>
 	      <li>Computation: 02.1_computation.pdf has no pictures, <a href="https://github.com/coms30127/2023_24/blob/master/02_Computation/02.2_maths.nopic.pdf">02.2_maths.nopic.pdf</a>, <a href="https://github.com/coms30127/2023_24/blob/master/02_Computation/02.3_numerical.nopic.pdf">02.3_numerical.nopic.pdf</a>, rk_note.pdf has not pictures.</li>
-	      <li> MP Neurons: 03.1_mp_neurons.pdf has no pictures, <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.2_hopfield.nopic.pdf">03.2_hopfield.nopic.pdf</a></li>
+	      <li> MP Neurons: 03.1_mp_neurons.pdf has no pictures, <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.2_hopfield.nopic.pdf">03.2_hopfield.nopic.pdf</a>, <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.4_perceptron.nopic.pdf">03.4_perceptron.nopic.pdf</a></li></li>
 </ul>
 </body>
 
