--- a/2023.html
+++ b/2023.html
@@ -69,6 +69,7 @@
 	    worksheets, they aren't marked.
 	    <ul>
 	      <li>notes: Coursework1. <a href="https://github.com/coms30127/2023_24/blob/main/Courseworks/Coursework1/coursework1.pdf">coursework1.pdf</a></li>
+	      <li>notes: Coursework2. <a href="https://github.com/coms30127/2023_24/blob/main/Courseworks/Coursework2/coursework2.pdf">coursework2.pdf</a></li>
 	      </ul>
 
 	    
