--- a/2023.html
+++ b/2023.html
@@ -67,6 +67,7 @@
 	      <li><b>lecture 7</b>: cerebellum, rate based neurons.</li>
 <li>notes:  <a href="https://github.com/coms30127/2023_24/blob/master/04_Rate_Neurons/04.1_rate_neurons.pdf">04.1_rate_neurons.pdf</a></li>
 	      <li><b>lecture 8</b>: the visual system.</li>
+<li>notes: <a href="https://github.com/coms30127/2023_24/blob/master/04_Rate_Neurons/04.2_vision.pdf">04.2_vision.pdf</a></li>
 	    </ul>
 	    <h2 style="color: black">Courseworks</h2> These are the
 	    formative courseworks, they are not for marks and not
@@ -90,7 +91,7 @@ These notes replace the images with a short text description.
 	      <a href="https://github.com/coms30127/2023_24/blob/master/01_Introduction/01.5_areas.pdf">01.5_areas.nopic.pdf</a></li>
 	      <li>Computation: 02.1_computation.pdf has no pictures, <a href="https://github.com/coms30127/2023_24/blob/master/02_Computation/02.2_maths.nopic.pdf">02.2_maths.nopic.pdf</a>, <a href="https://github.com/coms30127/2023_24/blob/master/02_Computation/02.3_numerical.nopic.pdf">02.3_numerical.nopic.pdf</a>, rk_note.pdf has not pictures.</li>
 	      <li> MP Neurons: 03.1_mp_neurons.pdf has no pictures, <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.2_hopfield.nopic.pdf">03.2_hopfield.nopic.pdf</a>, <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.4_perceptron.nopic.pdf">03.4_perceptron.nopic.pdf</a></li>
-	      <li> Rate Neurons. <a href="https://github.com/coms30127/2023_24/blob/master/04_Rate_Neurons/04.1_rate_neurons.nopic.pdf">04.1_rate_neurons.nopic.pdf</a></li>
+	      <li> Rate Neurons. <a href="https://github.com/coms30127/2023_24/blob/master/04_Rate_Neurons/04.1_rate_neurons.nopic.pdf">04.1_rate_neurons.nopic.pdf</a>, <a href="https://github.com/coms30127/2023_24/blob/master/04_Rate_Neurons/04.2_vision.nopic.pdf">04.2_vision.nopic.pdf</a></li>
 </ul>
 </body>
 
