--- a/2023.html
+++ b/2023.html
@@ -38,7 +38,7 @@
 	    <li>online lecture: Synapses. <a href="https://web.microsoftstream.com/video/323f51e3-22ae-42c4-9078-6b6c15be0c56">streams lecture 2</a></li>
       </ul>
     <li><b>computation</b>: these notes go over some background mathematical and coding details. They will not be lectured.
-    <li>notes: Coding. <a href="https://github.com/coms30127/2023_24/blob/master/02_Computation/02.1_computing.pdf">02.1_computing.pdf</a> this pdf is corrupt, I will fix soon</li>
+    <li>notes: Coding. <a href="https://github.com/coms30127/2023_24/blob/master/02_Computation/02.1_computing.pdf">02.1_computing.pdf</a></li>
     <li>notes: Differential equations. <a href="https://github.com/coms30127/2023_24/blob/master/02_Computation/02.2_maths.pdf">02.2_maths.pdf</a></li>
     <li>notes: Numerical approaches. <a href="https://github.com/coms30127/2023_24/blob/master/02_Computation/02.3_numerical.pdf">02.3_numerical.pdf</a> and <a href="https://github.com/coms30127/2023_24/blob/master/02_Computation/rk_note.pdf">rk_note.pdf</a></li>
     </ul>
