--- a/2023.html
+++ b/2023.html
@@ -69,6 +69,13 @@
 	      <li><b>lecture 8</b>: the visual system.</li>
 <li>notes: <a href="https://github.com/coms30127/2023_24/blob/master/04_Rate_Neurons/04.2_vision.pdf">04.2_vision.pdf</a></li>
 	    </ul>
+	    	    <h2 style="color: black">Week 5 - CH - Integrate and fire neurons</h2>
+	    <ul>
+	      <li><b>lecture 9</b>: the equation for a bucket of water.</li>
+	      <li><b>lecture 10</b>: the integrate and fire model.</li>
+	      <li>videos: these old videos cover the same material in less detail: <a href="https://www.youtube.com/watch?v=VrtVHAGjuEs">youtube 1.1</a> and
+	      <a href="https://www.youtube.com/watch?v=VhijgvVwn2g">youtube 1.2</a>.
+	    </ul>
 	    <h2 style="color: black">Courseworks</h2> These are the
 	    formative courseworks, they are not for marks and not
 	    submitted. Doing these courseworks should help you
