--- a/2023.html
+++ b/2023.html
@@ -72,7 +72,9 @@
 	    	    <h2 style="color: black">Week 5 - CH - Integrate and fire neurons</h2>
 	    <ul>
 	      <li><b>lecture 9</b>: the equation for a bucket of water.</li>
+	      <li>notes:  <a href="https://github.com/coms30127/2023_24/blob/master/05_LIF_Neurons/05.1_bucket_equation.pdf">05.1_bucket_equation.pdf</a></li>
 	      <li><b>lecture 10</b>: the integrate and fire model.</li>
+	      	      <li>notes:  <a href="https://github.com/coms30127/2023_24/blob/master/05_LIF_Neurons/05.2_integrate_and_fire.pdf">05.2_integrate_and_fire.pdf</a></li>
 	      <li>videos: these old videos cover the same material in less detail: <a href="https://www.youtube.com/watch?v=VrtVHAGjuEs">youtube 1.1</a> and
 	      <a href="https://www.youtube.com/watch?v=VhijgvVwn2g">youtube 1.2</a>.
 	    </ul>
