--- a/2023.html
+++ b/2023.html
@@ -88,6 +88,7 @@
 	    <ul>
 	      <li>notes: Coursework1. <a href="https://github.com/coms30127/2023_24/blob/main/Courseworks/Coursework1/coursework1.pdf">coursework1.pdf</a></li>
 	      <li>notes: Coursework2. <a href="https://github.com/coms30127/2023_24/blob/main/Courseworks/Coursework2/coursework2.pdf">coursework2.pdf</a></li>
+	      <li>notes: Coursework3. <a href="https://github.com/coms30127/2023_24/blob/main/Courseworks/Coursework3/coursework3.pdf">coursework3.pdf</a></li>
 	      </ul>
 
 	    
