--- a/2023.html
+++ b/2023.html
@@ -78,6 +78,14 @@
 	      <li>videos: these old videos cover the same material in less detail: <a href="https://www.youtube.com/watch?v=VrtVHAGjuEs">youtube 1.1</a> and
 	      <a href="https://www.youtube.com/watch?v=VhijgvVwn2g">youtube 1.2</a>.
 	    </ul>
+	    	    <h2 style="color: black">Week 6 - CH - Reading week</h2>
+	    	    <h2 style="color: black">Week 7 - CH - Synapses</h2>
+	    <li>notes:  <a href="https://github.com/coms30127/2023_24/blob/master/06_Synapses/06_synaptic_dynamics.pdf">06_synaptic_dynamics.pdf</a></li>
+	    <ul>
+
+	    </ul>
+
+		    
 	    <h2 style="color: black">Courseworks</h2> These are the
 	    formative courseworks, they are not for marks and not
 	    submitted. Doing these courseworks should help you
@@ -102,7 +110,8 @@ These notes replace the images with a short text description.
 	      <li>Computation: 02.1_computation.pdf has no pictures, <a href="https://github.com/coms30127/2023_24/blob/master/02_Computation/02.2_maths.nopic.pdf">02.2_maths.nopic.pdf</a>, <a href="https://github.com/coms30127/2023_24/blob/master/02_Computation/02.3_numerical.nopic.pdf">02.3_numerical.nopic.pdf</a>, rk_note.pdf has not pictures.</li>
 	      <li> MP Neurons: 03.1_mp_neurons.pdf has no pictures, <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.2_hopfield.nopic.pdf">03.2_hopfield.nopic.pdf</a>, <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.4_perceptron.nopic.pdf">03.4_perceptron.nopic.pdf</a></li>
 	      <li> Rate Neurons. <a href="https://github.com/coms30127/2023_24/blob/master/04_Rate_Neurons/04.1_rate_neurons.nopic.pdf">04.1_rate_neurons.nopic.pdf</a>, <a href="https://github.com/coms30127/2023_24/blob/master/04_Rate_Neurons/04.2_vision.nopic.pdf">04.2_vision.nopic.pdf</a></li>
-	      	      <li> Integrate and Fire Neurons. <a href="https://github.com/coms30127/2023_24/blob/master/05_LIF_Neurons/05.1_bucket_equation.nopic.pdf">05.1_bucket_equation.nopic.pdf</a></li>, <a href="https://github.com/coms30127/2023_24/blob/master/05_LIF_Neurons/05.2_integrate_and_fire.nopic.pdf">05.2_integrate_and_fire.nopic.pdf</a></li>
+	      <li> Integrate and Fire Neurons. <a href="https://github.com/coms30127/2023_24/blob/master/05_LIF_Neurons/05.1_bucket_equation.nopic.pdf">05.1_bucket_equation.nopic.pdf</a></li>, <a href="https://github.com/coms30127/2023_24/blob/master/05_LIF_Neurons/05.2_integrate_and_fire.nopic.pdf">05.2_integrate_and_fire.nopic.pdf</a></li>
+<li> Synapses. <a href="https://github.com/coms30127/2023_24/blob/master/06_Synapses/06_synaptic_dynamics.pdf">06_synaptic_dynamics.nopic.pdf</a>06_synaptic_dynamics.nopic.pdf</a></li>
 </ul>
 </body>
 
