--- a/2023.html
+++ b/2023.html
@@ -98,7 +98,18 @@
 	      <li>notes: Coursework2. <a href="https://github.com/coms30127/2023_24/blob/main/Courseworks/Coursework2/coursework2.pdf">coursework2.pdf</a></li>
 	      <li>notes: Coursework3. <a href="https://github.com/coms30127/2023_24/blob/main/Courseworks/Coursework3/coursework3.pdf">coursework3.pdf</a></li>
 	      </ul>
-
+	    <h2 style="color: black">Past papers</h2> The content of
+	    this unit has shifted over the years and the amount of
+	    material covered is less. These past papers will include
+	    questions that are no longer covered, they are intended to
+	    give an impression of the style of question, rather than
+	    describe the range of material!
+	    <ul>
+	      <li>2018 sample. <a href="https://github.com/coms30127/2023_24/blob/main/2018_sample_COMS30127.pdf">2018_sample_COMS30127.pdf</a>, <a href="https://github.com/coms30127/2023_24/blob/main/2018_sample_COMS30127.soln.pdf">2018_sample_COMS30127.soln.pdf</a>, 
+	      <li>2018 summer. <a href="https://github.com/coms30127/2023_24/blob/main/2018_summer_COMS30127.pdf">2018_summer_COMS30127.pdf</a>, <a href="https://github.com/coms30127/2023_24/blob/main/2018_sample_COMS30127.soln.pdf">2018_summer_COMS30127.soln.pdf</a>,  <a href="https://github.com/coms30127/2023_24/blob/main/2018_summer_COMS30127.nopic.pdf">2018_summer_COMS30127.nopic.pdf</a>, <a href="https://github.com/coms30127/2023_24/blob/main/2018_sample_COMS30127.nopic.soln.pdf">2018_summer_COMS30127.nopic.soln.pdf</a>.
+<li>2019 autumn. <a href="https://github.com/coms30127/2023_24/blob/main/2019_autumn_COMS30127.pdf">2019_autumn_COMS30127.pdf</a>, <a href="https://github.com/coms30127/2023_24/blob/main/2018_sample_COMS30127.soln.pdf">2019_autumn_COMS30127.soln.pdf</a>,  <a href="https://github.com/coms30127/2023_24/blob/main/2019_autumn_COMS30127.nopic.pdf">2019_autumn_COMS30127.nopic.pdf</a>, <a href="https://github.com/coms30127/2023_24/blob/main/2018_sample_COMS30127.nopic.soln.pdf">2019_autumn_COMS30127.nopic.soln.pdf</a>.
+	      </ul>
+	    
 	    
 	    <h2 style="color: black">Picture free notes</h2>
 These notes replace the images with a short text description.
