--- a/2023.html
+++ b/2023.html
@@ -82,7 +82,9 @@
 	    	    <h2 style="color: black">Week 7 - CH - Synapses</h2>
 	    <li>notes:  <a href="https://github.com/coms30127/2023_24/blob/master/06_Synapses/06_synaptic_dynamics.pdf">06_synaptic_dynamics.pdf</a></li>
 	    <ul>
-
+	      <h2 style="color: black">Week 8 - CH - Synapses</h2>
+	    <li>notes:  <a href="https://github.com/coms30127/2023_24/blob/master/07_HodgkinHuxley/07_Hodgkin_Huxley.pdf">07_Hodgkin_Huxley.pdf</a></li>
+	      
 	    </ul>
 
 		    
@@ -123,6 +125,8 @@ These notes replace the images with a short text description.
 	      <li> Rate Neurons. <a href="https://github.com/coms30127/2023_24/blob/master/04_Rate_Neurons/04.1_rate_neurons.nopic.pdf">04.1_rate_neurons.nopic.pdf</a>, <a href="https://github.com/coms30127/2023_24/blob/master/04_Rate_Neurons/04.2_vision.nopic.pdf">04.2_vision.nopic.pdf</a></li>
 	      <li> Integrate and Fire Neurons. <a href="https://github.com/coms30127/2023_24/blob/master/05_LIF_Neurons/05.1_bucket_equation.nopic.pdf">05.1_bucket_equation.nopic.pdf</a></li>, <a href="https://github.com/coms30127/2023_24/blob/master/05_LIF_Neurons/05.2_integrate_and_fire.nopic.pdf">05.2_integrate_and_fire.nopic.pdf</a></li>
 <li> Synapses. <a href="https://github.com/coms30127/2023_24/blob/master/06_Synapses/06_synaptic_dynamics.pdf">06_synaptic_dynamics.nopic.pdf</a>06_synaptic_dynamics.nopic.pdf</a></li>
+<li> Hodgkin Huxley. <a href="https://github.com/coms30127/2023_24/blob/master/07_HodgkinHuxley/07_Hodgkin_Huxley.nopic.pdf">07_Hodgkin_Huxley.nopic.pdf</a>
+
 </ul>
 </body>
 
