--- a/2023.html
+++ b/2023.html
@@ -80,9 +80,13 @@
 	    </ul>
 	    	    <h2 style="color: black">Week 6 - CH - Reading week</h2>
 	    	    <h2 style="color: black">Week 7 - CH - Synapses</h2>
-	    <li>notes:  <a href="https://github.com/coms30127/2023_24/blob/master/06_Synapses/06_synaptic_dynamics.pdf">06_synaptic_dynamics.pdf</a></li>
+	    <li><b>lecture 11</b>: more on the integrate and fire model.</li>
+	      <li><b>lecture 12</b>: synaptic dynamics.</li>
+	    <li>notes:  <a href="https://github.com/coms30127/2023_24/blob/master/06_Synapses/06.1_synaptic_dynamics.pdf">06.1_synaptic_dynamics.pdf</a></li>
 	    <ul>
 	      <h2 style="color: black">Week 8 - CH - Synapses</h2>
+	      	    <li><b>lecture 11</b>: synaptic plasticity</li>
+	      <li><b>lecture 12 (to appear as video)</b>: the Hodgkin-Huxley equations.</li>
 	    <li>notes:  <a href="https://github.com/coms30127/2023_24/blob/master/07_HodgkinHuxley/07_Hodgkin_Huxley.pdf">07_Hodgkin_Huxley.pdf</a></li>
 	      
 	    </ul>
