--- a/2023.html
+++ b/2023.html
@@ -131,7 +131,7 @@ These notes replace the images with a short text description.
 	      <li> MP Neurons: 03.1_mp_neurons.pdf has no pictures, <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.2_hopfield.nopic.pdf">03.2_hopfield.nopic.pdf</a>, <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.4_perceptron.nopic.pdf">03.4_perceptron.nopic.pdf</a></li>
 	      <li> Rate Neurons. <a href="https://github.com/coms30127/2023_24/blob/master/04_Rate_Neurons/04.1_rate_neurons.nopic.pdf">04.1_rate_neurons.nopic.pdf</a>, <a href="https://github.com/coms30127/2023_24/blob/master/04_Rate_Neurons/04.2_vision.nopic.pdf">04.2_vision.nopic.pdf</a></li>
 	      <li> Integrate and Fire Neurons. <a href="https://github.com/coms30127/2023_24/blob/master/05_LIF_Neurons/05.1_bucket_equation.nopic.pdf">05.1_bucket_equation.nopic.pdf</a></li>, <a href="https://github.com/coms30127/2023_24/blob/master/05_LIF_Neurons/05.2_integrate_and_fire.nopic.pdf">05.2_integrate_and_fire.nopic.pdf</a></li>
-<li> Synapses. <a href="https://github.com/coms30127/2023_24/blob/master/06_Synapses/06_synaptic_dynamics.pdf">06_synaptic_dynamics.nopic.pdf</a>06_synaptic_dynamics.nopic.pdf</a></li>
+<li> Synapses. <a href="https://github.com/coms30127/2023_24/blob/master/06_Synapses/06.1_synaptic_dynamics.pdf">06.1_synaptic_dynamics.nopic.pdf</a>06_synaptic_dynamics.nopic.pdf</a></li>
 <li> Hodgkin Huxley. <a href="https://github.com/coms30127/2023_24/blob/master/07_HodgkinHuxley/07_Hodgkin_Huxley.nopic.pdf">07_Hodgkin_Huxley.nopic.pdf</a>
 
 </ul>
