--- a/2023.html
+++ b/2023.html
@@ -106,7 +106,7 @@
 	      <li>notes: Coursework3. <a href="https://github.com/coms30127/2023_24/blob/main/Courseworks/Coursework3/coursework3.pdf">coursework3.pdf</a></li>
 	      </ul>
 
-	    <h2 style="color: black">Extended Coursework</h2> This is available at <a href="https://github.com/coms30127/2023_24/blob/main/ExtendedCoursework/coursework.pdf">coursework1.pdf</a> with the data in the folder <a href="https://github.com/coms30127/2023_24/tree/main/ExtendedCoursework">github.com/coms30127</a>.
+	    <h2 style="color: black">Extended Coursework</h2> This is available at <a href="https://github.com/coms30127/2023_24/blob/main/ExtendedCoursework/coursework.pdf">coursework1.pdf</a> with the data in the folder <a href="https://github.com/coms30127/2023_24/tree/main/ExtendedCoursework">github.com/coms30127</a>. Submit by 13h on Thursday 2023-12-07.
 
 	    <h2 style="color: black">Past papers</h2> The content of
 	    this unit has shifted over the years and the amount of
