--- a/2023.html
+++ b/2023.html
@@ -86,7 +86,7 @@
 	    <ul>
 	      <h2 style="color: black">Week 8 - CH - Synapses</h2>
 	      	    <li><b>lecture 11</b>: synaptic plasticity</li>
-	      <li><b>lecture 12 (to appear as video)</b>: the Hodgkin-Huxley equations.</li>
+	      <li><b>lecture 12</b>: the Hodgkin-Huxley equations, <a href="https://youtu.be/khSExYiF-mk">youtube</a></li>
 	      	    <li>notes:  <a href="https://github.com/coms30127/2023_24/blob/master/06_Synapses/06.2_synaptic_plasticity.pdf">06.2_synaptic_plasticity.pdf</a></li>
 	    <li>notes:  <a href="https://github.com/coms30127/2023_24/blob/master/07_Hodgkin_Huxley/07.1_Hodgkin_Huxley.pdf">07.1_Hodgkin_Huxley.pdf</a></li>
 	      
