--- a/2023.html
+++ b/2023.html
@@ -59,8 +59,8 @@
 	      <li>slides: the hippocampus.  <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.slides.pdf">03.slides.pdf</a></li>
 	      <li>notes: the hippocampus.  <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.3_hippocampus.pdf">03.4_hippocampus.pdf</a></li>
 	      <li><b>lecture 6</b>: the perceptron; start of the cerebellum and te cerebellum as perceptron.</li>
-  <li>notes: the perceptron.  <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.4_perceptron.pdf">03.4_perceptron.pdf</a></li>
-	      <li>notes: the cerebellum. on the way</li>
+	      <li>notes: the perceptron.  <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.4_perceptron.pdf">03.4_perceptron.pdf</a></li>
+	        <li>notes: the cerebellum.  <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.5_cerebellum.pdf">03.4_perceptron.pdf</a></li>
 	      </ul>
 	    <h2 style="color: black">Week 4 - SFW - Rate based neurons</h2>
 	    <ul>
@@ -129,7 +129,7 @@ These notes replace the images with a short text description.
 	      <a href="https://github.com/coms30127/2023_24/blob/master/01_Introduction/01.4_cortex.nopic.pdf">01.4_cortex.nopic.pdf</a>,
 	      <a href="https://github.com/coms30127/2023_24/blob/master/01_Introduction/01.5_areas.pdf">01.5_areas.nopic.pdf</a></li>
 	      <li>Computation: 02.1_computation.pdf has no pictures, <a href="https://github.com/coms30127/2023_24/blob/master/02_Computation/02.2_maths.nopic.pdf">02.2_maths.nopic.pdf</a>, <a href="https://github.com/coms30127/2023_24/blob/master/02_Computation/02.3_numerical.nopic.pdf">02.3_numerical.nopic.pdf</a>, rk_note.pdf has not pictures.</li>
-	      <li> MP Neurons: 03.1_mp_neurons.pdf has no pictures, <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.2_hopfield.nopic.pdf">03.2_hopfield.nopic.pdf</a>, <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.4_perceptron.nopic.pdf">03.4_perceptron.nopic.pdf</a></li>
+	      <li> MP Neurons: 03.1_mp_neurons.pdf has no pictures, <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.2_hopfield.nopic.pdf">03.2_hopfield.nopic.pdf</a>, <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.4_perceptron.nopic.pdf">03.4_perceptron.nopic.pdf</a>, <a href="https://github.com/coms30127/2023_24/blob/master/03_MP_Neurons/03.4_cerebellum.nopic.pdf">03.5_cerebellum.nopic.pdf</a></li>
 	      <li> Rate Neurons. <a href="https://github.com/coms30127/2023_24/blob/master/04_Rate_Neurons/04.1_rate_neurons.nopic.pdf">04.1_rate_neurons.nopic.pdf</a>, <a href="https://github.com/coms30127/2023_24/blob/master/04_Rate_Neurons/04.2_vision.nopic.pdf">04.2_vision.nopic.pdf</a></li>
 	      <li> Integrate and Fire Neurons. <a href="https://github.com/coms30127/2023_24/blob/master/05_LIF_Neurons/05.1_bucket_equation.nopic.pdf">05.1_bucket_equation.nopic.pdf</a></li>, <a href="https://github.com/coms30127/2023_24/blob/master/05_LIF_Neurons/05.2_integrate_and_fire.nopic.pdf">05.2_integrate_and_fire.nopic.pdf</a></li>
 <li> Synapses. <a href="https://github.com/coms30127/2023_24/blob/master/06_Synapses/06.1_synaptic_dynamics.pdf">06.1_synaptic_dynamics.nopic.pdf</a>06_synaptic_dynamics.nopic.pdf</a></li>, <a href="https://github.com/coms30127/2023_24/blob/master/06_Synapses/06.2_synaptic_plasticity.nopic.pdf">06.2_synaptic_plasticity.nopic.pdf</a>
